--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <header>
                     <!--                this header class here wes "special"-->
                     <h2>About me</h2>
-                    <p>I recently graduated from the National Technical University of Athens where I conducted my diploma thesis with Prof. Georgios Goumas. We worked on Dijkstra’s algorithm and employed software prefetching to migitate memory latency. The result of our work were presented in MultiProg 2018 workshop in HiPEAC. <a href="http://www.cslab.ece.ntua.gr/images/kanellopoulos-cv.pdf">Download Resume</a></p>
+                    <p>I recently graduated from the National Technical University of Athens where I conducted my diploma thesis with Prof. Georgios Goumas. On September 2018 I joined SAFARI @ ETH Zurich where I work under the supervision of Prof. Onur Mutlu. <a href="http://www.cslab.ece.ntua.gr/images/kanellopoulos-cv.pdf">Download Resume</a></p>
                 </header>
             </div>
             <div class="highlights">
@@ -75,7 +75,7 @@
                         </header>
                         <p><b>2016-2018 :</b> Academic Junior Researcher Computing Systems Laboratory, National Technical University of Athens </p>
                         <hr>
-                        <p><b>2018-2019 :</b> ETH University </p>
+                        <p><b>2018-2019 :</b> Research assistant SAFARI@ETH Zurich  </p>
                     </div>
                 </section>
                 <section id="Research">
@@ -89,9 +89,9 @@
 
                                 <li>Computer architecture & Parallel systems.</li>
                                 <li>Memory subsystem.</li>
-                                <li>Processing-In-Memory technologies.</li>
-                                <li>Graph analytics.</li>
-
+                                <li>Processing-In-Memory </li>
+                                <li>Graph analytics & Graph Mining</li>
+                                <li>Hardware Security </li>
 
                             </ul>
                         </p>
@@ -196,13 +196,6 @@
 
     <!-- CTA -->
     <section id="cta" class="wrapper">
-        <div class="inner">
-            <h2>BOOK CHAPTERS</h2>
-            <p><b>Decoupling the Programming Model from Resource Management in Throughput Processors</b> Nandita Vijaykumar, Kevin Hsieh, Gennady Pekhimenko, Samira Khan, Ashish Shrestha, Saugata Ghose, Adwait Jog, Phillip B. Gibbons, Onur Mutlu Many Core Computing: Hardware and Software, IET, 2019. arXiv.org version, May 2018.</p>
-
-
-            <p><b>A Framework for Accelerating Bottlenecks in GPU Execution with Assist Warps</b> Nandita Vijaykumar, Gennady Pekhimenko, Adwait Jog, Abhishek Bhowmick, Rachata Ausavarungnirun, Chita Das, Mahmut Kandemir, Todd C. Mowry, Onur Mutlu Invited Book Chapter in Advances in GPU Research and Practice, Morgan Kaufmann, 2016. arXiv.org version, February 2016.</p>
-        </div>
     </section>
 
     <!-- Testimonials -->
@@ -214,44 +207,7 @@
             </header>
             <div class="testimonials">
                 <section>
-                    <div class="content">
-                        <blockquote>
-                            <p>Continuous Integration of Machine Learning Models: A Rigorous Yet Practical Treatment" accepted at SysML 2019....<a href="myBlog.html">read more</a></p>
-                        </blockquote>
-                        <div class="author">
-                            <div class="image">
-                                <img src="images/pic01.jpg" alt="" />
-                            </div>
-                            <p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="content">
-                        <blockquote>
-                            <p>Gustavo Alonso gives a talk at Oracle on in-network data processing....<a href="myBlog.html">read more</a></p>
-                        </blockquote>
-                        <div class="author">
-                            <div class="image">
-                                <img src="images/pic03.jpg" alt="" />
-                            </div>
-                            <p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                    <div class="content">
-                        <blockquote>
-                            <p>Paper by Kaan Kara, "ColumnML: Column Store Machine Learning with on the fly data transformation", accepted at VLDB'19....<a href="myBlog.html">read more</a></p>
-                        </blockquote>
-                        <div class="author">
-                            <div class="image">
-                                <img src="images/pic02.jpg" alt="" />
-                            </div>
-                            <p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
-                        </div>
-                    </div>
-                </section>
+               </section>
             </div>
         </div>
     </section>
